--- a/中央财经大学/中央财经大学_files/style.css
+++ b/中央财经大学/中央财经大学_files/style.css
@@ -80,7 +80,7 @@
     display: none;
 }
 
-.pop_box{width:772px;height:468px;background:#fff;position:fixed;top:50%;margin-top:-234px;left:50%;margin-left:-386px;z-index:1100;border-radius:5px;display:none;}
+.pop_box{width:772px;height:468px;background:#eee;position:fixed;top:50%;margin-top:-234px;left:50%;margin-left:-386px;z-index:1100;border-radius:5px;display:none;}
 .pop_box a.close{display:block;width:38px;height:38px;border-radius:50%;background:#f5f5f5;float:right;margin:12px;font-size:30px;text-align:center;line-height:35px;color:#000;transition:all 0.2s linear 0s;}
 .pop_box a.close:hover{background: #2b4464;color:#fff;}
 .pop_box .title{width:565px;text-align:center;font-size:18px;color:#000;margin:90px 0 40px 104px;}
