--- a/中央财经大学/files/style.css
+++ b/中央财经大学/files/style.css
@@ -80,7 +80,7 @@
     display: none;
 }
 
-.pop_box{width:772px;height:468px;background:#eee;position:fixed;top:50%;margin-top:-234px;left:50%;margin-left:-386px;z-index:1100;border-radius:5px;display:none;}
+.pop_box{width:772px;height:468px;background:#fff;position:fixed;top:50%;margin-top:-234px;left:50%;margin-left:-386px;z-index:1100;border-radius:5px;display:none;}
 .pop_box a.close{display:block;width:38px;height:38px;border-radius:50%;background:#f5f5f5;float:right;margin:12px;font-size:30px;text-align:center;line-height:35px;color:#000;transition:all 0.2s linear 0s;}
 .pop_box a.close:hover{background: #2b4464;color:#fff;}
 .pop_box .title{width:565px;text-align:center;font-size:18px;color:#000;margin:90px 0 40px 104px;}
@@ -89,11 +89,11 @@
 .pop_box .pop_detail .btn_list{float:left;}
 .pop_box .pop_detail .btn_list a{display:block;width:318px;height:58px;border:1px solid #000;border-radius:5px;line-height:58px;font-size:18px;color:#000;margin:18px 0 26px;font-weight:bold;transition:all 0.2s linear 0s;}
 .pop_box .pop_detail .btn_list a i{display:inline-block;width:40px;height:40px;float:left;margin:10px 20px 10px 70px;transition:all 0.2s linear 0s;}
-.pop_box .pop_detail .btn_list a i.iphone-icon{background:url(icon.png) no-repeat 0 -40px;}
-.pop_box .pop_detail .btn_list a i.android-icon{background:url(icon.png) no-repeat -40px -40px;}
+.pop_box .pop_detail .btn_list a i.iphone-icon{background:url(icon1.png) no-repeat 0 -40px;}
+.pop_box .pop_detail .btn_list a i.android-icon{background:url(icon1.png) no-repeat -40px -40px;}
 .pop_box .pop_detail .btn_list a:hover{background:#000;color:#fff;}
-.pop_box .pop_detail .btn_list a:hover i.iphone-icon{background:url(icon.png) no-repeat 0 0;}
-.pop_box .pop_detail .btn_list a:hover i.android-icon{background:url(icon.png) no-repeat -40px 0;}
+.pop_box .pop_detail .btn_list a:hover i.iphone-icon{background:url(icon1.png) no-repeat 0 0;}
+.pop_box .pop_detail .btn_list a:hover i.android-icon{background:url(icon1.png) no-repeat -40px 0;}
 .pop_box .pop_detail .btn_list a:active{position:relative;top:2px;}
 .pop_box .text{width:565px;text-align:center;font-size:18px;color:#000;margin-left:104px;margin-top:40px;}
 .pop_box .text a{color: #008acf;}
